--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -28,7 +28,7 @@ twitter_username: lmao
 github_username:  nullsspec
 
 # Build settings
-theme: minima
+remote_theme: jekyll/minima
 plugins:
   - jekyll-feed
 
