--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -22,8 +22,8 @@ title: Nodemin
 email: Admin@Nodemin.com
 description: >- # this means to ignore newlines until "baseurl:"
   Welcome to the suck.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # GitPages, Keep Empty
+url: ""
 twitter_username: lmao
 github_username:  nullsspec
 
